[package]
name = "ones-manhour-record-alert"
version = "0.1.0"
edition = "2021"
description = "ONES 工时登记提醒机器人"
license = "MIT"
authors = ["RustPanic <rustpanic@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.8.21"
clap = "2.34.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
tera = "1"
anyhow = "1.0"
